[tool.poetry]
name = "whoami_back"
version = "0.1.0"
description = "It's a repository for the whoami backend"
authors = ["Joseph Cho <mkc.k2580@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
gunicorn = "^20.0.4"
SQLAlchemy = "^1.4.2"
uvloop = "^0.15.2"
httptools = "^0.1.1"
asyncpg = "^0.22.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
email-validator = "^1.1.2"
google-auth = "^1.29.0"
requests = "^2.25.1"
sendgrid = "^6.7.0"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.1"
python-multipart = "^0.0.5"
greenlet = "^1.1.1"
boto3 = "^1.17.106"
databases = {extras = ["postgresql"], version = "^0.5.3"}
orjson = "^3.7.7"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"
alembic = "^1.5.7"
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"
asynctest = "^0.13.0"
flake8 = "^3.9.1"
psycopg2-binary = "^2.8.6"
pytest-asyncio = "^0.15.1"
arrow = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 85
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git          # exclude a few common directories in the
    | \.venv         # root of the project
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 85 

[tool.poetry.plugins."routes"]
"users_v1" = "whoami_back.api.v1.users.routes"
"users_v2" = "whoami_back.api.v2.users.routes"
"users" = "whoami_back.api.v1.users.routes"
"follow" = "whoami_back.api.v1.follow.routes"
"notifications" = "whoami_back.api.v1.notifications.routes"
"board_v1" = "whoami_back.api.v1.board.routes"
"board_v2" = "whoami_back.api.v2.board.routes"
"posts_v1" = "whoami_back.api.v1.posts.routes"
"posts_v2" = "whoami_back.api.v2.posts.routes"
"user_profile" = "whoami_back.api.v1.user_profile.routes"
"utils" = "whoami_back.api.v1.utils.routes"
"account" = "whoami_back.api.v1.account.routes"
"system" = "whoami_back.api.system.routes"
"search" = "whoami_back.api.v1.search.routes"
